Firefox improvement visibility fix
Fixed improvements on firefox by giving width & height to improvement divs.

--- a/src/less/map.less
+++ b/src/less/map.less
@@ -127,6 +127,8 @@
 .improvement, .improvement-back, .improvement-front {
     position: absolute;
     display: block;
+    width: @tile_side;
+    height: @tile_side;
     z-index: 10;
 
     img {
